--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>Este es el tìtulo</h1>
+        <h1>Este es el título</h1>
     </div>
     <div>
         <p>Hola gente como estan</p>
