Primera idea de diseño del blogpost

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="styles.css"
 </head>
 <body>
-    <div>
+    <div id="head">
         <h1>Este es el título</h1>
-    </div>
-    <div>
-        <p>Hola gente como estan</p>
+        <p>Prueba blogpost git</p>
+        <ul>
+            <li>Entrada 1</li>
+            <li>Entrada 2</li>
+            <li>Entrada 3</li>
+        </ul>
     </div>
 </body>
 </html>
